# aiseo

./: Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  error.rs  imgprobe.rs  main.rs
src/audit/: ai_slop.rs  content.rs  copy_precision.rs  design_slop.rs  entities.rs  evidence.rs  factors.rs  freshness.rs  info_gain.rs  keywords.rs  links.rs  meta.rs  metatext.rs  mod.rs  performance.rs  position.rs  report.rs  suggest.rs  voice.rs
src/commands/: agent_info.rs  audit.rs  fetch.rs  mod.rs  schema.rs  skill.rs  verify.rs
tests/: agent_info_contract.rs  exit_code_contracts.rs  output_contracts.rs  robustness.rs
tests/common/: mod.rs
