[package]
name = "aiseo"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Agent-first CLI for SEO, GEO (generative engine optimisation), and AEO (answer engine optimisation) audits."
license = "MIT"
repository = "https://github.com/paperfoot/aiseo"
authors = ["Boris Djordjevic <boris@paperfoot.com>"]
keywords = ["seo", "geo", "aeo", "ai-search", "agent"]
categories = ["command-line-utilities"]

[[bin]]
name = "aiseo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7"
owo-colors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2"] }
figment = { version = "0.10", features = ["toml", "env"] }
directories = "6"
scraper = "0.20"
regex = "1.10"
chrono = { version = "0.4", features = ["clock"] }
percent-encoding = "2.3"
ureq = { version = "2.10", features = ["json"] }
once_cell = "1.20"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
